<resources>
    <string name="app_name">RightRain</string>
    <string name="sensors_list">Lista de Sensores</string>
    <string name ="locations">Localizações</string>
    <string name="statistics">Estatísticas</string>
    <string name="Name">Nome</string>
    <string name="email">E-mail</string>
    <string name="graphic">Gráfico</string>
    <string name="phone">Telefone</string>
    <string name="pass">Senha</string>
    <string name="repeat_pass">Repetir senha</string>
    <string name="signup">Cadastrar</string>
    <string name="login_required">Faça seu login para continuar!</string>
    <string name="type_username">Usuário/E-mail</string>
    <string name="sign_up_user">Criar conta</string>
    <string name="forget_pass">Esqueceu a senha?</string>
    <string name="access">Acessar</string>
    <string name="type_pass">Senha</string>
    <string name = "new_pass">Nova senha</string>
    <string name="invalid_data">Usuário ou senha inválidos!</string>
    <string name="success">Login sucedido!</string>
    <string name="a">a</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiZ2l2LWZueiIsImEiOiJjbGg4NXh6NzIwNWJ1M2Vtd2ZmcXpqMzgyIn0.lb_Yre-0LNVWEHT6bUlLBg</string>
    <string name="sign_off">Sair</string>
    <string name="mainscreen">Tela Inicial</string>
    <string name="settings">Configurações</string>
    <string name="add_device">Adicionar dispositivo</string>
    <string name="notifications">Avisos</string>
    <string name="notifications2">Notificações</string>
    <string name="soil_humidity">Umidade\nSolo</string>
    <string name="air_humidity">Umidade\nAr</string>
    <string name="temperature">Temperatura</string>
    <string name="device_1">Device 1</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="startDate">Data inicial</string>
    <string name="finalDate">Data final</string>
    <string name="options">Opções</string>
    <string name="close">Fechar</string>
    <string name="open">Abrir</string>
    <string name="clean">Limpar</string>
    <string name="new_login">Novo Login!</string>
    <string name="unavailable">Dados indisponiveis!</string>
    <string name="select_other_params">Selecione outros parametros!</string>
    <string name="registered_in">\u0020registrado\u0020em\u0020</string>
    <string name="future_register">\u0020previsto\u0020para\u0020</string>
    <string name="no_notifications">Nenhum aviso registrado!</string>
    <string name="content_info">O usuário %1$s fez login na data %2$s às %3$s</string>
    <string name="password_error">Senhas não coincidem!</string>
    <string name="create_user_error">Usuário não criado, verifique informações!</string>
    <string name="unknown_login">Algum usuário fez login em alguma data desconhecida.</string>
    <string name="about">Sobre</string>
    <string name="notification_details">Receber avisos de login</string>
    <string name="about_details">Sobre o RightRain</string>
    <string name="internet_unavailable">Internet indisponível, tente mais tarde!</string>
    <string name="no_values_available">Sem valores disponíveis!</string>
    <string name="in_future">futuramente</string>
    <string name="sucess_on_predict">Valores previstos com sucesso!</string>
    <string name="infos">Informações</string>
    <string name="infos_info">Mostrar informações de data e hora ao clicar em pontos no gráfico</string>
    <string name="future">Futuramente</string>
</resources>