<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <Button
        android:id="@+id/type_btn"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/green"
        android:textSize="20sp"
        android:text="@string/soil_humidity">
    </Button>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/start_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/startDate"
            android:layout_marginStart="20sp"
            android:textColor="@color/white">
        </Button>
        <TextView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/a">
        </TextView>
        <Button
            android:id="@+id/end_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/yellow"
            android:layout_marginEnd="20sp"
            android:text="@string/finalDate"
            android:textColor="@color/white">
        </Button>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
    </com.github.mikephil.charting.charts.LineChart>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:src="@drawable/baseline_auto_graph_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/graph1"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/open"
            app:tint="@color/white"
            android:tint="@color/white"
            android:backgroundTint="@color/green"
            />
    </RelativeLayout>
</LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>