<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bot_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:layout_gravity="start"
            android:src="@drawable/baseline_menu_24"
            app:tint="@color/green">

        </ImageView>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo">

        </ImageView>

        <ImageView
            android:id="@+id/notification_btn"
            android:clickable="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:src="@drawable/baseline_notifications_none_24"
            app:tint="@color/green">
        </ImageView>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/type_btn"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/green"
        android:textSize="20sp"
        android:text="@string/rainfall">
    </Button>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/start_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/startDate"
        android:layout_marginStart="20sp"
        android:textColor="@color/white">
    </Button>

        <TextView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/a">
        </TextView>

        <Button
            android:id="@+id/end_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/yellow"
            android:layout_marginEnd="20sp"
            android:text="@string/finalDate"
            android:textColor="@color/white">
        </Button>

    </FrameLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
    </com.github.mikephil.charting.charts.LineChart>


</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextColor="@color/black"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>